--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <link rel="stylesheet" type="text/css" href="./css/slider1.css">
   <link rel="stylesheet" href="./footer/footer.min.css">
-
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
 
@@ -157,7 +157,7 @@
 <div class="container text-center">
 <h2>Earn up to £8,000 a month renting out your stuff</h2>
 <p class="text-secondary my-3">Join the thousands of lenders already earning money renting out their unused belongings.</p>
-<div class="collector">
+<div class="collector" data-aos="fade-up" data-aos-duration="3000">
 <div class="row">
 <div class="col-md-4">
   <img src="https://img.icons8.com/nolan/64/000000/security-checked.png" class="my-3">
@@ -210,8 +210,8 @@
 
  <section id="featured-section">
    <div class="container">
-<h5 class="text-center">Featured items</h5>
-<section class="regular slider mt-5">
+<h5 class="text-center" data-aos="zoom-in">Featured items</h5>
+<section class="regular slider mt-5"  data-aos="fade-up" data-aos-duration="3000">
     <div>
         <div class="card">
             <img src="./image/air-aircraft-blue-sky-336232.jpg" class="card-img-top" alt="featured-section">
@@ -281,8 +281,8 @@
 <!-- GAME AND VR Section -->
 <section id="gaming-section">
   <div class="container">
-<h5 class="text-center">Gaming and VR</h5>
-<section class="regular slider mt-5">
+<h5 class="text-center"  data-aos="flip-down" data-aos-duration="1000">Gaming and VR</h5>
+<section class="regular slider mt-5"  data-aos="fade-up" data-aos-duration="3000">
    <div>
        <div class="card">
            <img src="./image/air-aircraft-blue-sky-336232.jpg" class="card-img-top" alt="featured-section">
@@ -348,7 +348,7 @@
 </section>
 <!-- GAME AND Vr SECTION -->
 <!-- TOP STORIES -->
-<div id="cut-edge"></div>
+
 
 
 
@@ -356,14 +356,14 @@
 <section id="top-stories" class="setbakground mt-4 p-4">
 
 <div class="container text-white top p-3">
-    <h2 class="text-center mb-5">Our top Lenders</h2>
+    <h2 class="text-center mb-5"  data-aos="fade-up" data-aos-duration="1000">Our top Lenders</h2>
 <div class="row">
-  <div class="col-md-4 mb-3 mt-md-5 text-center text-md-left">
+  <div class="col-md-4 mb-3 mt-md-5 text-center text-md-left"  data-aos="fade-right" data-aos-duration="3000">
     <h1>Who's top dog?</h1>
     <div>Our top lenders (last 30 days)</div>
     <button class="btn btn-outline-light mt-4">View the leaderboard</button>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-8"  data-aos="fade-left" data-aos-duration="3000">
 <div class="row">
   <div class="col-md-4 mb-3">
     <div class="card bg-primary">
@@ -484,10 +484,10 @@
 
 <!-- Reviews Section -->
 <section id="review-section" class="p-5">
-<h2 class="text-center text-white">Recent rental reviews</h2>
+<h2 class="text-center text-white"  data-aos="fade-up" data-aos-duration="1000">Recent rental reviews</h2>
 <div class="container mt-5 mb-5">
 <div class="row mb-4">
-  <div class="col-md-6 mb-3">
+  <div class="col-md-6 mb-3"  data-aos="flip-left" data-aos-duration="3000">
       <div class="card">
           <div class="card-body p-3">
             <div class="row mt-3">
@@ -509,7 +509,7 @@
           </div>
         </div>
   </div>
-  <div class="col-md-6 mb-3">
+  <div class="col-md-6 mb-3"  data-aos="flip-right" data-aos-duration="3000">
       <div class="card">
           <div class="card-body p-3">
             <div class="row mt-3">
@@ -535,7 +535,7 @@
 </div>
 
 <div class="row d-none d-md-flex">
-    <div class="col-md-6 mb-3">
+    <div class="col-md-6 mb-3"  data-aos="flip-up" data-aos-duration="3000">
         <div class="card">
             <div class="card-body p-3">
               <div class="row mt-3">
@@ -557,7 +557,7 @@
             </div>
           </div>
     </div>
-    <div class="col-md-6 mb-3">
+    <div class="col-md-6 mb-3"  data-aos="flip-down" data-aos-duration="3000">
         <div class="card">
             <div class="card-body p-3">
               <div class="row mt-3">
@@ -583,7 +583,7 @@
   
 </div>
 <div class="my-5 d-flex justify-content-center" style="width:100%;">
-<button class="btn btn-outline-light text-center">Browse items</button>
+<button class="btn btn-outline-light text-center" data-aos="fade-up" data-aos-duration="3000">Browse items</button>
 </div>
 
 </div>
@@ -608,24 +608,24 @@
       <h1>In the press</h1>
       <h5>Read what top authors have been saying about us</h5>
     <div class="row my-4">
-      <div class="col-md-6 mb-4">
+      <div class="col-md-6 mb-4"  data-aos="fade-right" data-aos-duration="3000">
         <img src="./image/images.png" alt="press">
         <p class="mt-0 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum numquam, corporis quaerat dolores sapiente esse eius libero officiis eveniet sequi.</p>
         <button class="btn btn-outline-primary">Read the article</button>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6"  data-aos="fade-left" data-aos-duration="3000">
         <img src="./image/forbes-gray-logo-transparent-1.png" alt="press">
         <p class="mt-0 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum numquam, corporis quaerat dolores sapiente esse eius libero officiis eveniet sequi.</p>
         <button class="btn btn-outline-primary">Read the article</button>
       </div>
     </div>
     <div class="row my-4">
-      <div class="col-md-6 mb-4">
+      <div class="col-md-6 mb-4"  data-aos="fade-right" data-aos-duration="3000">
         <img src="./image/thehindu-icon.png" alt="press">
         <p class="mt-0 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum numquam, corporis quaerat dolores sapiente esse eius libero officiis eveniet sequi.</p>
         <button class="btn btn-outline-primary">Read the article</button>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6"  data-aos="fade-left" data-aos-duration="3000">
         <img src="./image/download.png" alt="press">
         <p class="mt-0 mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum numquam, corporis quaerat dolores sapiente esse eius libero officiis eveniet sequi.</p>
         <button class="btn btn-outline-primary">Read the article</button>
@@ -838,6 +838,8 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script src="./js/slick.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
     
