--- a/dashboard.html
+++ b/dashboard.html
@@ -186,7 +186,7 @@
   </small>
   <div class="mt-3 d-flex justify-content-between"><h6 class="text-dark">+91********24</h6>
   <a href="#">Remove</a></div>
-  <div id="add-phone">Add Phone number</div>
+  <div id="add-phone" class="d-inline">Add Phone number</div>
 <!-- PHONE CARD -->
 <div class="row mt-3" id="add-phone-users" style="display:none;">
 <div class="col-md-8">
@@ -362,7 +362,7 @@ Your home time zone.
     <label class="col-md-2 pr-md-0 text-md-right mt-md-1" for="inlineFormCustomSelectPref123">Language</label>
 <div class="col-md-10">
 <div class="text-secondary mb-2">None</div>
-<div class="add-btn" data-toggle="modal" data-target="#exampleModalLong1"><i class="fas fa-plus mr-1 text-secondary"></i>Add More</div>
+<div class="add-btn d-inline" data-toggle="modal" data-target="#exampleModalLong1"><i class="fas fa-plus mr-1 text-secondary"></i>Add More</div>
 <small class="form-text text-muted">
     Add any languages that others can use to speak with you on Airbnb
     </small>
@@ -374,7 +374,7 @@ Your home time zone.
     <label class="col-md-2 pr-md-0 text-md-right mt-md-1" for="inlineFormCustomSelectPref113">VAT Number</label>
 <div class="col-md-10">
 
-<div class="add-btn"  data-toggle="modal" data-target="#exampleModalLong2"><i class="fas fa-plus mr-1 text-secondary"></i>Add Vat ID Number</div>
+<div class="add-btn d-inline" data-toggle="modal" data-target="#exampleModalLong2"><i class="fas fa-plus mr-1 text-secondary"></i>Add Vat ID Number</div>
 <small class="form-text text-muted">
     For European Union users or users in other countries for which VAT applies, VAT will be assessed on our Service Fees. If you live in a country where we need to charge VAT, you will not be charged VAT if you enter a valid VAT ID Number. Visit VAT FAQs »
     </small>
@@ -385,7 +385,7 @@ Your home time zone.
     <label class="col-md-2 pr-md-0 text-md-right mt-md-1" for="inlineFormCustomSelectPref115">Emergency Contact<span><i class="fas fa-lock ml-1 text-danger" data-toggle="tooltip" data-placement="top" title="Private"></i></span> </label>
 <div class="col-md-10">
 
-<div class="add-btn" id="add-contact"><i class="fas fa-plus mr-1 text-secondary" ></i>Add contact</div>
+<div class="add-btn d-inline" id="add-contact"><i class="fas fa-plus mr-1 text-secondary" ></i>Add contact</div>
 <div id="add-users" style="display:none;">
   <div>
 <hr>
@@ -554,7 +554,7 @@ Your home time zone.
     <label class="col-md-2 pr-md-0 text-md-right mt-md-1" for="inlineFormCustomSelectPref1157">Guest Profiles<span><i class="fas fa-lock ml-1 text-danger" data-toggle="tooltip" data-placement="top" title="Private"></i></span> </label>
 <div class="col-md-10">
 
-<div class="add-btn" id="add-guest"><i class="fas fa-plus mr-1 text-secondary"></i>Add new guest profile</div>
+<div class="add-btn d-inline"><i class="fas fa-plus mr-1 text-secondary"></i><span id="add-guest">Add new guest profile</span></div>
 
 <div class="mt-4" id="add-guest-users" style="display:none;">
     <hr>
