document-mana-added

--- a/dashboard.html
+++ b/dashboard.html
@@ -82,7 +82,7 @@
     <li class="list-group-item">
       <a href="./reference.html"><i class="fas fa-address-card"></i><span class="ml-2">Reference</span></a></li>
   </ul>
-  <a class="btn btn-block btn-outline-secondary mt-4" href="./profile.html">View Profile</a>+
+  <a class="btn btn-block btn-outline-secondary mt-4" href="./profile.html">View Profile</a>
 </div>
 <div class="col-md-9">
   <div class="card">
