--- a/profile.html
+++ b/profile.html
@@ -66,6 +66,12 @@
 <!-- PROFILE SECTION -->
 <section id="profile">
 <div class="container">
+  <div class="d-flex justify-content-end mb-4">
+    <div class="custom-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="customSwitch1">
+        <label class="custom-control-label" for="customSwitch1">Toggle switch</label>
+      </div>
+  </div>
 <div class="row">
     <div class="col-md-4">
         <div class="card">
