--- a/preference.html
+++ b/preference.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Notification</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -97,67 +97,72 @@
     </nav>
 
     <!-- NAVBAR -->
-    <!-- PROFILE SECTION -->
-    <section id="profile">
-      <div class="container">
-        <div class="d-flex justify-content-end mb-4">
-          <div class="custom-control custom-switch">
-            <input
-              type="checkbox"
-              class="custom-control-input"
-              id="customSwitch1"
-            />
-            <label class="custom-control-label" for="customSwitch1"
-              >Toggle switch</label
+    <!-- DASHBOARD SECTION -->
+    <section id="dashboard" class="mt-5">
+      <div class="container p-0 p-md-0">
+        <div class="row mx-auto">
+          <div class="col-md-3 mb-4">
+            <ul class="list-group text-secondary">
+              <li class="list-group-item actives">
+                <a href="./dashboard.html"
+                  ><i class="fas fa-user-edit"></i
+                  ><span class="ml-2">Edit Profile</span>
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="./photos.html"
+                  ><i class="fas fa-images"></i
+                  ><span class="ml-2">Photos</span></a
+                >
+              </li>
+              <li class="list-group-item">
+                <a href="./trust.html" class="actives">
+                  <i class="fas fa-user-shield"></i
+                  ><span class="ml-2">Trust and Verification</span>
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="./reviews.html"
+                  ><i class="fas fa-eye"></i
+                  ><span class="ml-2">Reviews</span></a
+                >
+              </li>
+              <li class="list-group-item">
+                <a href="./reference.html"
+                  ><i class="fas fa-address-card"></i
+                  ><span class="ml-2">Reference</span></a
+                >
+              </li>
+            </ul>
+            <a
+              class="btn btn-block btn-outline-secondary mt-4"
+              href="./profile.html"
+              >View Profile</a
             >
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="d-flex justify-content-center align-items-center p-4">
-                <img
-                  src="./image/user_pic-225x225.png"
-                  class="card-img-top rounded-circle"
-                  alt="users"
-                />
-              </div>
-
-              <div class="card-body userid">
-                <hr />
-                <h6 class="text-dark mt-4">User Provided</h6>
-                <div class="mt-4 text-secondary d-flex">
-                  <img
-                    src="./image/10-512.png"
-                    alt="check"
-                    class="align-self-center"
-                  />
-                  <div class="align-self-center mx-1">Email Address</div>
-                </div>
-                <div class="mt-3 text-secondary d-flex">
-                  <img
-                    src="./image/10-512.png"
-                    alt="check"
-                    class="align-self-center"
-                  />
-                  <div class="align-self-center mx-1">Phone number</div>
-                </div>
-              </div>
+          <div class="col-md-9">
+            <h3 class="font-weight-bolder">Payout Methods</h3>
+            <div class="mb-3">
+              When you receive a payment for a reservation, we call that payment
+              to you a "payout." Our secure payment system supports several
+              payout methods, which can be set up below.
+              <a href="#" class="text-info"> Go to FAQ.</a>
             </div>
-          </div>
-          <div class="col-md-6 mx-auto mt-5 mt-md-0 text-center text-md-left">
-            <h1 class="display-4">Hi, I’m User</h1>
-            <p class="text-secondary ml-1">
-              Joined in 2019 .<a href="./dashboard.html">Edit profile</a>
-            </p>
-
-            <a href="#" class="mt-5">Report this profile</a>
+            <h6 class="font-weight-bolder">
+              To get paid, you need to set up a payout method
+            </h6>
+            <div class="mb-3">
+              Airbnb releases payouts about 24 hours after a guest’s scheduled
+              check-in time. The time it takes for the funds to appear in your
+              account depends on your payout method.
+              <a href="#" class="text-info"> Learn more</a>
+            </div>
+            <button class="btn btn-info btn-lg">Add payout Method</button>
           </div>
         </div>
       </div>
     </section>
-    <!-- PROFILE SECTION -->
-
+    <div style="height:30vh;"></div>
     <!-- FOOTER -->
     <footer id="myFooter" class="mt-4 setbakground">
       <div class="p-5">
@@ -225,29 +230,41 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script>
-      //  FOR TOOLTIPS
-      $(function() {
-        $('[data-toggle="tooltip"]').tooltip();
-      });
-      // FOR ADD USERS
-      $(function() {
-        $("#add-contact").on("click", () => {
-          $("#add-users").fadeToggle();
-        });
-        // FOR SHIPING
-        $("#add-shipping").on("click", () => {
-          $("#add-shipping-users").fadeToggle();
-        });
-        // FOR GUEST
-        $("#add-guest").on("click", () => {
-          $("#add-guest-users").fadeToggle();
-        });
-        // FOR THE ADDING PHONE
-        $("#add-phone").on("click", () => {
-          $("#add-phone-users").fadeToggle();
-        });
-      });
-    </script>
+    <!-- <script>
+ 
+//  FOR TOOLTIPS
+ $(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+// FOR ADD USERS
+ $(function(){
+$('#add-contact').on('click',()=>{
+$('#add-users').fadeToggle();
+  
+})
+// FOR SHIPING
+$('#add-shipping').on('click',()=>{
+$('#add-shipping-users').fadeToggle();
+  
+})
+// FOR GUEST
+$('#add-guest').on('click',()=>{
+$('#add-guest-users').fadeToggle();
+  
+})
+// FOR THE ADDING PHONE
+$('#add-phone').on('click',()=>{
+$('#add-phone-users').fadeToggle();
+  
+})
+
+
+
+ })
+
+
+
+
+ </script> -->
   </body>
 </html>
