--- a/dashboard.html
+++ b/dashboard.html
@@ -81,6 +81,8 @@
       <a href="./reviews.html"><i class="fas fa-eye"></i><span class="ml-2">Reviews</span></a></li>
     <li class="list-group-item">
       <a href="./reference.html"><i class="fas fa-address-card"></i><span class="ml-2">Reference</span></a></li>
+      <li class="list-group-item">
+          <a href="./documentman.html"><i class="fas fa-address-card"></i><span class="ml-2">Document management</span></a></li>
   </ul>
   <a class="btn btn-block btn-outline-secondary mt-4" href="./profile.html">View Profile</a>
 </div>
