--- a/setting.html
+++ b/setting.html
@@ -103,36 +103,35 @@
         <div class="row mx-auto">
           <div class="col-md-3 mb-4">
             <ul class="list-group text-secondary">
-              <li class="list-group-item actives">
-                <a href="./dashboard.html"
-                  ><i class="fas fa-user-edit"></i
-                  ><span class="ml-2">Edit Profile</span>
+              <li class="list-group-item">
+                <a href="./notification.html"
+                  ><i class="fas fa-flag"></i
+                  ><span class="ml-2">Notification</span>
                 </a>
               </li>
               <li class="list-group-item">
-                <a href="./photos.html"
-                  ><i class="fas fa-images"></i
-                  ><span class="ml-2">Photos</span></a
+                <a href="./security.html"
+                  ><i class="fas fa-key"></i
+                  ><span class="ml-2">security</span></a
                 >
               </li>
               <li class="list-group-item">
-                <a href="./trust.html" class="actives">
-                  <i class="fas fa-user-shield"></i
-                  ><span class="ml-2">Trust and Verification</span>
+                <a href="./setting.html" class="actives">
+                  <i class="fas fa-cog"></i><span class="ml-2">Setting</span>
                 </a>
               </li>
               <li class="list-group-item">
-                <a href="./reviews.html"
-                  ><i class="fas fa-eye"></i
-                  ><span class="ml-2">Reviews</span></a
+                <a href="./preference.html"
+                  ><i class="far fa-credit-card"></i
+                  ><span class="ml-2">Preference</span></a
                 >
               </li>
-              <li class="list-group-item">
-                <a href="./reference.html"
-                  ><i class="fas fa-address-card"></i
-                  ><span class="ml-2">Reference</span></a
-                >
-              </li>
+              <!--<li class="list-group-item">
+                          <a href="./reference.html"
+                            ><i class="fas fa-address-card"></i
+                            ><span class="ml-2">Reference</span></a
+                          >
+                        </li> -->
             </ul>
             <a
               class="btn btn-block btn-outline-secondary mt-4"
